telexpress/istio/vs-http.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gw-http
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5601
        host: kibana-kibana.elk.svc.cluster.local
