telexpress/istio/vs-kibana.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gw-kibana
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5601
        host: kibana-kibana.elk.svc.cluster.local
