telexpress/istio/vs-prometheus.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prom-grafana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gw-prom-grafana
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: prom-grafana.prom.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gw-alertmanager
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9093
        host: prom-prometheus-operator-alertmanager.prom.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gw-prometheus
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prom-prometheus-operator-prometheus.prom.svc.cluster.local
---
