telexpress/istio/network-policy-per-host.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-ingress
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istio-ingressgateway
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 118.163.1.132/32
    - ipBlock:
        cidr: 35.201.227.44/32
